--- a/graph/.vscode/vex_project_settings.json
+++ b/graph/.vscode/vex_project_settings.json
@@ -4,12 +4,12 @@
 		"json": 2
 	},
 	"project": {
-		"name": "OnlineC-class",
-		"description": "June 2024 online class",
-		"creationDate": "6/5/2024, 6:08:47 PM",
+		"name": "graph",
+		"description": "",
+		"creationDate": "6/16/2024, 10:19:14 AM",
 		"platform": "V5",
 		"language": "cpp",
-		"slot": 3,
+		"slot": 1,
 		"sdkVersion": "V5_20240223_11_00_00",
 		"cpp": {
 			"includePath": [],
